feat(CP-2A): run application on Java 8